<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:padding="@dimen/list_item_padding"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
             android:layout_marginRight="@dimen/activity_vertical_margin"
             android:stretchColumns="*"
             android:shrinkColumns="*"
             android:layout_height="wrap_content">
    <TableRow>
        <TextView android:text="@string/name" style="@style/TextAppearance.AppCompat.Medium"/>
        <TextView android:id="@+id/name" style="@style/TextAppearance.AppCompat.Medium"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/job_title"/>
        <TextView android:id="@+id/label"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/email"/>
        <TextView android:id="@+id/email"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/phone"/>
        <TextView android:id="@+id/phone"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/summary"/>
        <TextView android:id="@+id/summary"/>
    </TableRow>
</TableLayout>
