<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:padding="@dimen/list_item_padding"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
             android:layout_marginRight="@dimen/activity_vertical_margin"
             android:layout_height="wrap_content">

    <TableRow>
        <TextView android:text="@string/name" style="@style/TextAppearance.AppCompat.Medium"
                  android:paddingEnd="@dimen/list_item_padding"/>
        <TextView android:id="@+id/company" style="@style/TextAppearance.AppCompat.Medium"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/date"
                  android:paddingEnd="@dimen/list_item_padding"/>
        <TextView android:id="@+id/dates"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/position"
                  android:paddingEnd="@dimen/list_item_padding"/>
        <TextView android:id="@+id/position"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/website"
                  android:paddingEnd="@dimen/list_item_padding"/>
        <TextView android:id="@+id/website"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/summary"
                  android:paddingEnd="@dimen/list_item_padding"/>
        <TextView android:id="@+id/summary"/>
    </TableRow>
</TableLayout>
